src/third_party/blink/web_tests/virtual/web-components-v0-disabled/fast/dom/shadow/hovered-detached-with-dirty-distribution-crash-expected.txt
CONSOLE ERROR: line 18: Uncaught TypeError: host.createShadowRoot is not a function
Tests that detaching a hovered node with dirty distributuion doesn't crash.
Hovered
